Some fixes to the positioning of chat elements regarding overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,25 @@
 .App {
+  position: relative;
   text-align: center;
   height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .BackgroundTextContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: -1;
+  top: 50%;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 
 .BackgroundDisclaimer {
   position: absolute;
+  z-index: -2;
   bottom: 65px;
   margin-left: auto;
   margin-right: auto;
