--- a/src/components/organisms/header/Header.css
+++ b/src/components/organisms/header/Header.css
@@ -1,10 +1,13 @@
 .header {
-    display: flex;
+  display: flex;
+  position: sticky;
+  top: 20px;
+  left: 0;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 1rem;
   border-bottom: 1px solid #e9ecef;
-    -webkit-box-shadow: -1px -12px 60px -2px rgba(0,0,0,0.24);
-    -moz-box-shadow: -1px -12px 60px -2px rgba(0,0,0,0.24);
-    box-shadow: -1px -12px 60px -2px rgba(0,0,0,0.24);
+  -webkit-box-shadow: -1px -12px 60px -2px rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: -1px -12px 60px -2px rgba(0, 0, 0, 0.24);
+  box-shadow: -1px -12px 60px -2px rgba(0, 0, 0, 0.24);
 }
